--- a/micro/gRPC.org
+++ b/micro/gRPC.org
@@ -20,12 +20,53 @@ https://www.cyberforum.ru/blogs/2396861/10270.html?ysclid=mgxcl82n25785829384
 =Protocol Buffers= (или просто =Protobuf=) — бинарный формат сериализации, который значительно компактнее и быстрее в обработке, чем XML или JSON. Важная особеность Protobuf — =строгая типизация=.
 Структуры данных определяются в специальных =.proto= файлах, на основе которых генерируются классы для различных языков программирования. Это гарантирует, что и клиент, и сервер "говорят на одном языке", минимизируя риск ошибок при передаче данных.
 
+* Способы взаимодействия
 Традиционная модель "запрос-ответ" расширяется до четырёх различных типов взаимодействия:
 1. =Унарные вызовы= (Unary RPCs) — классический паттерн "клиент отправляет один запрос, сервер возвращает один ответ".
 2. =Серверные потоковые вызовы= (Server streaming RPCs) — клиент отправляет один запрос, а сервер может вернуть поток ответов.
+   Определение:
+#+begin_src
+...
+rpc searchOrders(google.protobuf.StringValue) returns (stream Order);
+...
+#+end_src
+  Реализация:
+#+begin_src go
+func (s *server) SearchOrders(searchQuery *wrappers.StringValue,
+stream pb.OrderManagement_SearchOrdersServer) error {
+...
+	err := stream.Send(&order)
+...
+
+}
+#+end_src
+Удаленный вызов методов на клиентской стороне сильно напоминает простой RPC. Но в данном случае необходимо обрабатывать множественные ответы, поскольку сервер записывает в поток цепочку ответов. Таким образом, в реализации gRPC-клиента на Go мы последовательно извлекаем сообщения из клиентского потока, используя метод Recv(), и делаем это до тех пор, пока данный поток не закончится.
+#+begin_src go
+searchStream, _ := c.SearchOrders(ctx, &wrapper.StringValue{Value: "Google"})
+for {
+	searchOrder, err := searchStream.Recv()
+	...
+	if err == io.EOF {
+		break
+	}
+}
+#+end_src
+
 3. =Клиентские потоковые вызовы= (Client streaming RPCs) — клиент отправляет поток запросов, а сервер возвращает один ответ.
+   Определение
+#+begin_src
+service OrderManagement {
+...
+rpc updateOrders(stream Order) returns (google.protobuf.StringValue);
+...
+}
+#+end_src
+
+В этом случае клиент посылает множество запросов, а сервер их принимает в цикле
+
 4. =Двунаправленные потоковые вызовы= (Bidirectional streaming RPCs) — клиент и сервер могут обмениваться потоками сообщений в любом порядке.
 
+* Жизненный цикл запроса
 Жизненный цикл gRPC-запроса представляет собой последовательность событий:
 1. Клиентская заглушка (stub) упаковывает параметры метода в Protobuf-сообщение.
 2. Клиентская библиотека gRPC сериализует это сообщение в бинарный формат.
