--- a/haskell/setup.org
+++ b/haskell/setup.org
@@ -1,26 +1,8 @@
-* Установка stack
-#+begin_src shell
-sudo pacman -S stack
-#или
-curl -sSL https://get.haskellstack.org/ | sh
-#+end_src
-
 * Установка GHCup
 #+begin_src shell
 curl --proto '=https' --tlsv1.2 -sSf https://get-ghcup.haskell.org | sh
 #+end_src
 В файле .bashrc добавляем в PATH каталог .ghcup/bin
-
-
-* Устанавливаем ghc-mod (может не устанавливаться)
-#+begin_src shell
-stack install ghc-mod
-#+end_src
-
-* Устанавливаем lsp
-#+begin_src shell
-yay -S haskell-language-server-static
-#+end_src
 
 * Устанавливаем форматтер
 #+begin_src shell
@@ -67,7 +49,7 @@ stack build
 
 Внутри каталога .stack-work появиться исполняемый файл, его можно запустить так
 #+begin_src
-stack exec real-exe
+stack exec real
 #+end_src
 
 Форматировать файл
